--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,6 @@
     "cryptr": "^6.3.0",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
-    "next": "^14.0.4",
     "npm": "^10.2.5",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
@@ -28,5 +27,8 @@
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
+  },
+  "devDependencies": {
+    "next": "^14.1.0"
   }
 }
